# pydom

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-21-phase-4a-cssom-htmlelement-design.md
examples/: basic_usage.py  fragment.py
src/pydom/: __init__.py  api.py  url.py
src/pydom/browser/: __init__.py  location.py  window.py
src/pydom/browser/js/: __init__.py  bridge.py  globals.py  runtime.py
src/pydom/dom/: __init__.py  attr.py  document.py  document_fragment.py  element.py  event.py  exceptions.py  node.py  nodelist.py  text.py  tree_construction.py
src/pydom/html/: __init__.py  parser.py  serializer.py
src/pydom/selectors/: __init__.py  engine.py
tests/: conftest.py  test_events.py  test_jsdom_api.py  test_node_tree.py  test_parser.py  test_runscripts.py  test_selectors.py  test_serializer.py
